tests/errors/output/const_00_runtime.t
Can't assign runtime value to constant variable